--- a/index.html
+++ b/index.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8" />
     <title>Schere, Stein, Papier</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./styles/style.css" />
-    <script type="text/javascript" src="script.js" />
+    <script type="text/javascript" src="./script.js"></script>
   </head>
   <body>
-    <h1>Schere, Stein, Papier</h1>
-    <p>testing</p>
+    <div class="container">
+      <h1>Rock, Paper, Scissors</h1>
+      <p>Press Play to start playing.</p>
+      <p>
+        Click on the "Snapshot" button to Capture the current Snapshot and send it to the API.
+      </p>
+
+      <div class="camPanel">
+        <video id="liveVideo" autoplay="true"></video><br />
+        <button class="btn btn-primary button-group">Snapshot</button>
+      </div>
+    </div>
   </body>
 </html>
