--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
     <link rel="stylesheet" href="./styles/style.css" />
     <script type="text/javascript" src="./script.js"></script>
   </head>
@@ -19,20 +21,14 @@
         it on screen.
       </p>
 
-        <div class="camPanel">
-          <video id="video" autoplay="true"></video><br />
-          <button class="btn btn-primary button-snap" id="snapshot">
-            Snapshot
-          </button><br />
+      <div class="camPanel">
+        <video id="video" autoplay="true"></video><br />
+        <button class="btn btn-primary button-snap" id="snapshot">
+          Snapshot</button
+        ><br />
         <canvas id="canvas" width="224" height="224"></canvas>
         <img id="photo" width="224" height="224" />
-        </div>
-
-
-      <div class="camPanel">
-        <video id="liveVideo" autoplay="true"></video><br />
-        <button class="btn btn-primary button-group">Snapshot</button>
-
+        <div id="lable-container"></div>
       </div>
     </div>
   </body>
