--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
     <link rel="stylesheet" href="./styles/style.css" />
-    <script type="text/javascript" src="./script.js"></script>
+    <script type="text/javascript" src="/script.js"></script>
   </head>
   <body>
     <div class="container">
